# ERM-AND-POS

./: .gitignore  LLM_GUIDE.md  README.md  build.sh  build_for_hosting.sh  circle_favicon.py  extract_colors.py  index.html  package-lock.json  package.json  test_export.csv  vercel.json
api/: index.js  supabaseClient.js
api-rust/: Cargo.toml  Dockerfile
api-rust/src/: error.rs  init.rs  main.rs  middleware.rs  models.rs  supabase.rs
api-rust/src/routes/: admin.rs  auth.rs  cart.rs  inventory.rs  mod.rs  products.rs  sales.rs  settings.rs  stripe.rs  variants.rs
api-rust/static/: index.html
api-rust/static/assets/: index-BkSmqBCK.css  index-DtYm0mVx.js
api/migrations/: migration_cart_reservation.sql
scripts/: migrate_customer.js
server/: db.js  erm.db  index.js  package-lock.json  package.json  verify_schema.js
src/: App.jsx  api.js  index.css
src/components/: ActiveCarts.jsx  AddProductModal.jsx  AdminStatsModal.jsx  CartModal.jsx  CustomerHistory.jsx  CustomerShop.jsx  HierarchySelector.jsx  Layout.jsx  POS.jsx  PaymentModal.jsx  ProductEditor.jsx  ProductTable.jsx  Receipt.jsx  ReceiptModal.jsx  SalesHistory.jsx  SearchFilterBar.jsx
src/context/: AuthContext.jsx
src/models/: InventoryManager.js
src/pages/: Dashboard.jsx  Login.jsx  Management.jsx
src/styles/: base.css  variables.css
supabase/: fix_performance_warnings.sql  fix_security_linter.sql  migrate_auth.sql  send_otp_email.sql
