[package]
name = "erm-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
csv = "1.3"
urlencoding = "2"

